# metered-api-server

./: .dockerignore  .env.example  .example.env.docker  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  TESTING.md  docker-compose.example.yml
migrations/: 20250820045906_create_api_keys_table.sql  20250821070436_create_readings_table.sql  20250821221820_create_requests_table.sql  20250822203234_quota_limits_table.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: admin.rs  business.rs  metrics.rs  mod.rs  usage.rs
src/middleware/: auth.rs  mod.rs  rate_limiter.rs  validation.rs
src/models/: business.rs  metrics.rs  mod.rs  usage.rs
static/: swagger.html
