[package]
name = "metered-api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0.16"
anyhow = "1.0"
tracing-subscriber = "0.3.19"
tracing = "0.1"
